--- a/Host/Dockerfile
+++ b/Host/Dockerfile
@@ -5,14 +5,14 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 WORKDIR /src
-COPY ["ServiceTemplate/ServiceTemplate.csproj", "ServiceTemplate/"]
-RUN dotnet restore "ServiceTemplate/ServiceTemplate.csproj"
+COPY ["ServiceTemplate/Host.csproj", "ServiceTemplate/"]
+RUN dotnet restore "ServiceTemplate/Host.csproj"
 COPY . .
 WORKDIR "/src/ServiceTemplate"
-RUN dotnet build "ServiceTemplate.csproj" -c Release -o /app/build
+RUN dotnet build "Host.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "ServiceTemplate.csproj" -c Release -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "Host.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
