--- a/Host/appsettings.json
+++ b/Host/appsettings.json
@@ -1,11 +1,9 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
   "Serilog": {
+    "Using": [
+      //"Serilog.Sinks.File",
+      "Serilog.Sinks.Console"
+    ],
     "MinimumLevel": {
       "Default": "Debug",
       "Override": {
@@ -18,13 +16,35 @@
         "Name": "Async",
         "Args": {
           "configure": [
+//            {
+//              "Name": "File",
+//              "Args": {
+//                "path": "{configValue:LogFolders:ServiceLogFolder}/log_.txt",
+//                "rollingInterval": "Day",
+//                "fileSizeLimitBytes": "10485760",
+//                "rollOnFileSizeLimit": true,
+//                "outputTemplate": "{Timestamp:dd.MM.yyyy HH:mm:ss.fffzzz} [{Level:u3}] ({ThreadId}) {Message} (ActionId:{ActionId},RequestId:{RequestId}){NewLine}{Exception}"
+//              }
+//            },
             {
-              "Name": "Console"
+              "Name": "Console",
+              "Args": {
+                "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console",
+                "outputTemplate": "{Timestamp:dd.MM.yyyy HH:mm:ss.fffzzz} [{Level:u3}] ({ThreadId}) {Message} (ActionId:{ActionId},RequestId:{RequestId}){NewLine}{Exception}"
+              }
             }
           ]
         }
       }
-    ]
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithThreadId"
+    ],
+    "Properties": {
+      "Application": "ServiceTemplate"
+    }
   },
   "AllowedHosts": "*",
 
