--- a/Host/appsettings.json
+++ b/Host/appsettings.json
@@ -19,7 +19,7 @@
 //            {
 //              "Name": "File",
 //              "Args": {
-//                "path": "{configValue:LogFolders:ServiceLogFolder}/log_.txt",
+//                "path": "log_.txt",
 //                "rollingInterval": "Day",
 //                "fileSizeLimitBytes": "10485760",
 //                "rollOnFileSizeLimit": true,
