--- a/Host/appsettings.Production.json
+++ b/Host/appsettings.Production.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "Serilog": {
     "Using": [
       //"Serilog.Sinks.File",
@@ -16,16 +16,6 @@
         "Name": "Async",
         "Args": {
           "configure": [
-//            {
-//              "Name": "File",
-//              "Args": {
-//                "path": "log_.txt",
-//                "rollingInterval": "Day",
-//                "fileSizeLimitBytes": "10485760",
-//                "rollOnFileSizeLimit": true,
-//                "outputTemplate": "{Timestamp:dd.MM.yyyy HH:mm:ss.fffzzz} [{Level:u3}] ({ThreadId}) {Message} (ActionId:{ActionId},RequestId:{RequestId}){NewLine}{Exception}"
-//              }
-//            },
             {
               "Name": "Console",
               "Args": {
@@ -43,16 +33,20 @@
       "WithThreadId"
     ],
     "Properties": {
-      "Application": "ServiceTemplate"
+      "Application": "FoodRecipes"
     }
   },
   "AllowedHosts": "*",
 
   "BaseConfiguration": {
     "DatabaseConfig": {
-      "DbUserName": "postgres",
-      "DbPassword": "postgres",
-      "DbConnection": "Host=localhost;Database=postgres"
+      "DbUserName": "{{d_secret_user}}",
+      "DbPassword": "{{d_secret_password}}",
+      "DbConnection": "Host={{d_secret_server}};Database={{d_secret_database}}"
+
+      /*"DbUserName": "fooduser",
+      "DbPassword": "b8fe487301f1be92",
+        "DbConnection": "Host=srv-captain--food-db-rec;Database=postgres"*/
     },
     "SwaggerConfig": {
       "IsEnabled": true,
