Update documentation remove, useless files, add scripts to rename namespaces, csproj,sln

--- a/Host/Host.csproj
+++ b/Host/Host.csproj
@@ -42,6 +42,15 @@
 
 
 
+    <ItemGroup>
+      <Folder Include="Controllers\" />
+      <Folder Include="Mappers\" />
+      <Folder Include="Middleware\" />
+      <Folder Include="Services\" />
+    </ItemGroup>
+
+
+
 
 
 
