Add build and test github pipeline. Also rename it properly

--- a/.github/workflows/caprover-push-example.yml
+++ b/.github/workflows/caprover-push-example.yml
@@ -1,11 +1,9 @@
-name: .NET Core Desktop
+name: Push to CapRover example
 env:
   DockerContainer: 'template'
 on:
-  push:
-    branches: [ "master" ]
-  workflow_dispatch:
-
+  workflow_dispatch: 
+    
 jobs:
 
   build:
