Update a scripts and add file to match structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
-/Host/bin/
+/Host/[Bb]in/
+/Host/[Oo]bj/
+/ServiceTemplate.DataAccess/bin/
+/ServiceTemplate.DataAccess/[Oo]bj/
+/ServiceTemplate.DataContracts/[Bb]in/
+/ServiceTemplate.DataContracts/[Oo]bj/
 # User-specific stuff
 .idea/**/workspace.xml
 .idea/**/tasks.xml
