Update Dockerfile locations and improve build on Dockerfile

--- a/Host/appsettings.Production.json
+++ b/Host/appsettings.Production.json
@@ -38,11 +38,12 @@
   },
   "AllowedHosts": "*",
 
+  //I suggest to use enviroment setter. For example: BaseConfiguration_DatabaseConfig_DbUserName
   "BaseConfiguration": {
     "DatabaseConfig": {
       "DbUserName": "{{d_secret_user}}",
       "DbPassword": "{{d_secret_password}}",
-      "DbConnection": "Host={{d_secret_server}};Database={{d_secret_database}}"
+      "DbConnection": "Host={{d_secret_server}};Database={{d_secret_database}};Port={{d_secret_port}}"//do not set ';' in the end.
 
       /*"DbUserName": "fooduser",
       "DbPassword": "b8fe487301f1be92",
